# langchain

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  insert_sample_data.py  llm-service.Dockerfile  ollama.Dockerfile  pyproject.toml  test_resume.txt
.github/workflows/: dev-action.yml  python-publish.yml
chroma/: chroma.sqlite3
llm-service/: chat_langgraph.py  chat_langgraph_2.py  chatbot.py  chatbot_re.py  chromadb_news_test.py  chromadb_resume_test.py  langGraph_p1.py  main.py  save_to_chroma.py  smith.py  summarizer.py
llm-service-jupyter/: LangChain_summary.ipynb  chatbot.ipynb
llm-service/data/: data.txt
llm-service/file_data/: classified_pages.json  이력서_이준기.json  이력서_이준기.txt
llm-service/modules/: load_llm.py
llm-service/news_data/: news_sample1.json  news_sample1_summary.json
llm-service/test/: llm_test.ipynb
llm-service/test_data/: data.txt
