[tool.poetry]
name = "llm-service"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{ include = "llm-service" }]

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = ">=0.115.14,<0.116.0"
langchain = ">=0.3.26,<0.4.0"
"langchain-openai" = ">=0.3.27,<0.4.0"
langgraph = ">=0.5.1,<0.6.0"
pypdf = ">=5.7.0,<6.0.0"
"python-docx" = ">=1.2.0,<2.0.0"
"faiss-cpu" = ">=1.11.0,<2.0.0"
"sentence-transformers" = ">=5.0.0,<6.0.0"
uvicorn = ">=0.20.0,<0.21.0"
python-dotenv = ">=1.0.0,<2.0.0"
langchain-groq = "^0.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
